--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.MuiBox-root-19 {
+  left: 0px;
+  right: 0px;
+  bottom: 16px;
+  position: absolute;
+}
