--- a/src/index.css
+++ b/src/index.css
@@ -530,12 +530,15 @@ code {
     background-color: rgb(211, 47, 47);
     border: 2px solid rgb(211, 47, 47);
   }
+  .leave-btn > button:hover{ cursor: pointer; }
   .leave-btn .MuiButtonBase-root {margin: 0px !important;}
   .leave-btn-icon{opacity: 1; overflow: hidden; display: flex; justify-content: center; align-items: center; border-radius: 8px; transform: scale(1); transition: all 200ms linear 0s;}
   ::-webkit-scrollbar {
     width: 4px;
 }
 .featured-btn{height: 33px;width: 40px;display: flex; justify-content: center; align-items: center; border-radius: 8px; overflow: hidden; background-color: rgb(33, 32, 50); border: 2px solid rgba(255, 255, 255, 0.2); transition: all 200ms linear 0s;}
+.featured-btn > button:hover{ cursor: pointer; }
+
 .btn-featured-transparent{background-color: transparent;border: none;color: white;}
 .btn-featured-transparent:hover {
   background-color: transparent;
@@ -544,6 +547,8 @@ code {
   color: white;
   box-shadow: none;
 }
+
+
 .header-top{
   display:flex;
   justify-content: space-between;
